# mailing_service_new

./: .env.sample  .flake8  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: send_mailing.py
mailing/migrations/: 0001_initial.py  0002_remove_trymailing_message_trymailing_mailing.py  0003_mailing_last_sent_alter_trymailing_response.py  0004_remove_mailing_last_sent.py  0005_mailing_last_sent.py  0006_alter_trymailing_created_at.py  0007_alter_mailing_options_alter_message_options_and_more.py
mailing/templates/mailing/: base.html  home.html  mailing_confirm_delete.html  mailing_create.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_report.html  message_confirm_delete.html  message_create.html  message_detail.html  message_form.html  message_list.html  recipient_confirm_delete.html  recipient_create.html  recipient_detail.html  recipient_form.html  recipient_list.html
mailing/templates/mailing/includes/: inc_menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/: create_managers_group.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options_customuser_is_blocked_and_more.py
users/templates/users/: customuser_list.html  customuser_profile.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile_edit.html  register.html
