[tool.poetry]
name = "mailing-service"
version = "0.1.0"
description = "Service for recipients"
authors = ["kopstant <kopstant99@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
pillow = "^11.1.0"
ipython = "^9.0.1"
redis = "^5.2.1"
flake8 = "^7.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
